--- a/index.html
+++ b/index.html
@@ -283,12 +283,16 @@
                     <span class="text-[#E0C0B0] italic">Rodrigues</span>
                 </h1>
 
-                <p class="text-xl text-gray-300 font-light leading-relaxed max-w-lg">
-                    Um espaço seguro para reconectar sua essência. Atendimento ético, profundo e transformador.
-                </p>
+                <!-- Frase Poética em Cascata -->
+                <div
+                    class="text-xl md:text-2xl text-gray-200 font-serif italic leading-relaxed max-w-lg mt-8 space-y-2 opacity-90">
+                    <p class="block">Instante de ver</p>
+                    <p class="block pl-12 md:pl-16">Momento de entender</p>
+                    <p class="block pl-24 md:pl-32">Tempo de concluir.</p>
+                </div>
 
-                <div class="pt-4">
-                    <a onclick="lenis.scrollTo('#contato')" class="btn-gold cursor-pointer">
+                <div class="pt-8">
+                    <a href="https://wa.me/5533999828549" class="btn-gold cursor-pointer">
                         Agendar Sessão
                     </a>
                 </div>
@@ -410,15 +414,17 @@
                 Comece sua jornada<br>hoje mesmo.
             </h2>
 
-            <a href="https://wa.me/5511999999999" class="btn-gold border-none hover:bg-gray-200 cursor-pointer">
+            <a href="https://wa.me/5533999828549" class="btn-gold border-none hover:bg-gray-200 cursor-pointer">
                 Iniciar Conversa
             </a>
 
             <div
-                class="mt-20 flex flex-col md:flex-row justify-center gap-12 text-sm uppercase tracking-widest text-gray-500">
-                <span>Av. Paulista, 1000 - SP</span>
-                <span>(11) 99999-9999</span>
-                <span>@amandarodrigues_psi</span>
+                class="mt-20 flex flex-col md:flex-row justify-center items-center gap-8 md:gap-16 text-sm uppercase tracking-widest text-gray-500">
+                <a href="mailto:amandarodriguesb8@gmail.com"
+                    class="hover:text-white transition-colors">amandarodriguesb8@gmail.com</a>
+                <a href="https://wa.me/5533999828549" class="hover:text-white transition-colors">(33) 99982-8549</a>
+                <a href="https://instagram.com/psi_amanda8" target="_blank"
+                    class="hover:text-white transition-colors">@psi_amanda8</a>
             </div>
         </div>
     </section>
@@ -430,7 +436,7 @@
     <!-- FLOATERS -->
 
     <!-- WhatsApp (Esquerda) -->
-    <a href="https://wa.me/5511999999999" target="_blank" class="fab-whatsapp group">
+    <a href="https://wa.me/5533999828549" target="_blank" class="fab-whatsapp group">
         <i data-lucide="message-circle" class="w-8 h-8 stroke-[1.5px]"></i>
     </a>
 
