--- a/index.html
+++ b/index.html
@@ -331,8 +331,7 @@
                 </div>
 
                 <div class="w-full h-full rounded-t-full overflow-hidden relative bg-black/20">
-                    <img src="https://images.unsplash.com/photo-1534528741775-53994a69daeb?q=80&w=1964&auto=format&fit=crop"
-                        alt="Dra. Amanda Rodrigues"
+                    <img src="ar-perfil.jpeg" alt="Dra. Amanda Rodrigues"
                         class="w-full h-full object-cover object-top hover:scale-105 transition-transform duration-[2s]">
                     <div
                         class="absolute bottom-0 left-0 w-full h-1/3 bg-gradient-to-t from-[#7D2335] to-transparent opacity-80">
@@ -348,8 +347,7 @@
             <div class="grid grid-cols-1 lg:grid-cols-2 gap-20 items-start">
                 <div class="relative sticky top-32">
                     <div class="absolute -top-6 -left-6 w-32 h-32 border-t-2 border-l-2 border-[#7D2335]"></div>
-                    <img src="https://images.unsplash.com/photo-1507652313519-d4e9174996dd?q=80&w=2070&auto=format&fit=crop"
-                        class="w-full h-[600px] object-cover grayscale-[10%]" alt="Consultório">
+                    <img src="ar-second.jpeg" class="w-full h-[600px] object-cover grayscale-[10%]" alt="Consultório">
                 </div>
 
                 <div class="space-y-10">
