--- a/index.html
+++ b/index.html
@@ -327,14 +327,14 @@
 
             <!-- Imagem Hero -->
             <div class="order-1 lg:order-2 relative h-[50vh] lg:h-[80vh] w-full">
-                <div class="absolute top-4 right-4 w-full h-full border border-[#A67C6D] rounded-t-full opacity-50">
+                <div class="absolute top-4 right-4 w-full h-full border border-[#A67C6D] opacity-30">
                 </div>
 
-                <div class="w-full h-full rounded-t-full overflow-hidden relative bg-black/20">
+                <div class="w-full h-full overflow-hidden relative shadow-2xl">
                     <img src="ar-perfil.jpeg" alt="Dra. Amanda Rodrigues"
-                        class="w-full h-full object-cover object-top hover:scale-105 transition-transform duration-[2s]">
+                        class="w-full h-full object-cover object-center hover:scale-105 transition-transform duration-[2s]">
                     <div
-                        class="absolute bottom-0 left-0 w-full h-1/3 bg-gradient-to-t from-[#7D2335] to-transparent opacity-80">
+                        class="absolute bottom-0 left-0 w-full h-1/4 bg-gradient-to-t from-[#7D2335] to-transparent opacity-60">
                     </div>
                 </div>
             </div>
@@ -347,7 +347,8 @@
             <div class="grid grid-cols-1 lg:grid-cols-2 gap-20 items-start">
                 <div class="relative sticky top-32">
                     <div class="absolute -top-6 -left-6 w-32 h-32 border-t-2 border-l-2 border-[#7D2335]"></div>
-                    <img src="ar-second.jpeg" class="w-full h-[600px] object-cover grayscale-[10%]" alt="Consultório">
+                    <img src="ar-second.jpeg" class="w-full h-[600px] object-cover object-center shadow-lg"
+                        alt="Amanda Rodrigues">
                 </div>
 
                 <div class="space-y-10">
