--- a/index.html
+++ b/index.html
@@ -114,7 +114,15 @@
             width: 100%;
             max-width: 1400px;
             margin: 0 auto;
-            padding: 0 40px;
+            max-width: 1400px;
+            margin: 0 auto;
+            padding: 0 24px;
+        }
+
+        @media (min-width: 768px) {
+            .container-aether {
+                padding: 0 40px;
+            }
         }
 
         /* HERO SECTION */
@@ -160,11 +168,11 @@
         /* WhatsApp Esquerda */
         .fab-whatsapp {
             position: fixed;
-            bottom: 40px;
-            left: 40px;
+            bottom: 24px;
+            left: 24px;
             z-index: 100;
-            width: 64px;
-            height: 64px;
+            width: 48px;
+            height: 48px;
             background-color: var(--brand-primary);
             color: white;
             border-radius: 50%;
@@ -176,9 +184,16 @@
             border: 2px solid rgba(255, 255, 255, 0.2);
         }
 
-        .fab-whatsapp:hover {
-            transform: scale(1.1);
-            background-color: #631B2A;
+        background-color: #631B2A;
+        }
+
+        @media (min-width: 768px) {
+            .fab-whatsapp {
+                width: 64px;
+                height: 64px;
+                bottom: 40px;
+                left: 40px;
+            }
         }
 
         /* Back to Top Direita */
@@ -318,7 +333,7 @@
         <div class="container-aether grid grid-cols-1 lg:grid-cols-2 gap-24 lg:gap-40 items-center pt-20">
 
             <!-- Texto Hero -->
-            <div class="z-10 order-2 lg:order-1 space-y-12">
+            <div class="z-10 space-y-12">
                 <div class="border-l-2 border-[#A67C6D] pl-6">
                     <span class="text-sm uppercase tracking-[0.4em] text-[#A67C6D]">Psicologia Clínica</span>
                 </div>
@@ -344,7 +359,7 @@
             </div>
 
             <!-- Imagem Hero (Limpíssima) -->
-            <div class="order-1 lg:order-2 relative h-[50vh] lg:h-[80vh] w-full">
+            <div class="relative h-96 md:h-[50vh] lg:h-[80vh] w-full">
                 <!-- Removidos efeitos de borda/máscara complexos que estavam "feios" -->
                 <div class="w-full h-full relative shadow-2xl rounded-2xl overflow-hidden">
                     <!-- Usando a foto fornecida image_8f30fb.jpg -->
@@ -366,7 +381,7 @@
                 <!-- Imagem Sobre (SEM STICKY - Resolvendo bug mobile) -->
                 <div class="relative">
                     <!-- Removido sticky top-32 e bordas deslocadas que podiam parecer "bugadas" -->
-                    <div class="w-full h-[600px] overflow-hidden rounded-2xl shadow-xl">
+                    <div class="w-full h-96 lg:h-[600px] overflow-hidden rounded-2xl shadow-xl">
                         <!-- Usando a mesma foto de alta qualidade fornecida -->
                         <img src="/ar-second-hq.jpeg" class="w-full h-full object-cover object-center"
                             alt="Consultório">
