feat: Add hover effect with scale and background color change to WhatsApp FAB.

--- a/index.html
+++ b/index.html
@@ -184,7 +184,9 @@
             border: 2px solid rgba(255, 255, 255, 0.2);
         }
 
-        background-color: #631B2A;
+        .fab-whatsapp:hover {
+            transform: scale(1.1);
+            background-color: #631B2A;
         }
 
         @media (min-width: 768px) {
