style: Reorder hero section text and image elements for responsive layout.

--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
         <div class="container-aether grid grid-cols-1 lg:grid-cols-2 gap-24 lg:gap-40 items-center pt-20">
 
             <!-- Texto Hero -->
-            <div class="z-10 space-y-12">
+            <div class="z-10 order-2 lg:order-1 space-y-12">
                 <div class="border-l-2 border-[#A67C6D] pl-6">
                     <span class="text-sm uppercase tracking-[0.4em] text-[#A67C6D]">Psicologia Clínica</span>
                 </div>
@@ -361,7 +361,7 @@
             </div>
 
             <!-- Imagem Hero (Limpíssima) -->
-            <div class="relative h-96 md:h-[50vh] lg:h-[80vh] w-full">
+            <div class="order-1 lg:order-2 relative h-96 md:h-[50vh] lg:h-[80vh] w-full">
                 <!-- Removidos efeitos de borda/máscara complexos que estavam "feios" -->
                 <div class="w-full h-full relative shadow-2xl rounded-2xl overflow-hidden">
                     <!-- Usando a foto fornecida image_8f30fb.jpg -->
